------------
mtPaint NEWS
------------

Here is a summary of the main changes in this release (see handbook for full details):

3.51	2021-??-??
	* Kabyle translation added by Yacine Bouklif
	* Czech translation updated by Pavel Fric
	* Spanish translation updated by Adolfo Jayme
	* Tagalog translation updated by Anjelo delCarmen
	* Support for compiling with libtiff 3 restored

3.50	2020-12-31
	* Dutch translation updated by Pjotr
	* French translation updated by Victor Copovi
	* German translation updated by Simon Brixel
	* Russian translation updated
	* GTK+3 support - "./configure gtk3"
	* Scripting added - "Image->Script" to enter or run a script : See handbook chapter 10 for details
	* Commandline mode added - use "mtpaint --cmd" to run a script without GUI
	* Keyboard shortcuts can now be reconfigured - "Help->Keyboard shortcuts"
	* New keyboard shortcut Ctrl+H added for Channels->Hide image
	* Keyboard shortcuts now can be assigned for choosing previous/next pattern, and larger/smaller brush size
	* Optional gamma correction for painting and masking (Preferences->General->Use gamma correction when painting)
	* Rendering now uses multiple threads to utilize all available CPU cores
	* Text tools now allow selection of DPI value, letter-spacing, and alignment for multiline text
	* Distance function for shapeburst gradients is now selectable : "Distance type"
	* Composite images now can have alpha transparency, when background is non-opaque
	* Background layer now can use transparency like any other layer
	* Background layer position now can be changed via Ctrl+arrows or layers window spinbuttons, like any other layer
	* Patterns for colours A and B can now be chosen separately (Preferences->General->Separate patterns for A&B)
	* Builtin Bayer patterns now can be redefined : See handbook section A.6.1 for details
	* Threshold effect with interactive preview added (see handbook section 6.6.7)
	* Normalize effect added